# opengl-base

./: .gitignore  CMakeLists.txt
res/shaders/: texture.frag  texture.vert
resources/shaders/: texture.frag  texture.vert
src/: assets_manager.cpp  assets_manager.h  config.h  game.cpp  game.h  main.cpp  program.cpp  program.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.h  window.cpp  window.h
src/utils/: filesystem.h
